fix: fix spacing issues

--- a/apps/frontend/src/modules/endpoints/components/create-endpoints-host/create-endpoints-host.component.scss
+++ b/apps/frontend/src/modules/endpoints/components/create-endpoints-host/create-endpoints-host.component.scss
@@ -8,7 +8,7 @@
     display: flex;
     align-items: center;
     column-gap: 5px;
-    padding-bottom: 2rem;
+    padding-bottom: 1rem;
   }
 
   .create-endpoints__form {
