--- a/apps/frontend/src/modules/migrations/components/migrations-host-container/migrations-host-container.component.scss
+++ b/apps/frontend/src/modules/migrations/components/migrations-host-container/migrations-host-container.component.scss
@@ -3,7 +3,6 @@
   flex-wrap: wrap;
   gap: 1.5rem;
   justify-content: flex-start;
-  padding: 1rem;
 }
 
 .migration-card {
@@ -21,11 +20,12 @@
   width: 100%;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-end;
+  padding-bottom: 1rem;
 
   .migrations-header-ctas {
     display: flex;
     align-items: center;
-    column-gap: 8px;
+    column-gap: 12px;
   }
 }
